updating progress styles

--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,7 @@
       height: 20px;
       background-color: #9c9;
       bottom: 0;
+      display: block;
     }
     .complete {}
     .error {
